# src/config/swagger.json
@@ -6,6 +6,71 @@
 		"requestBodies": {},
 		"responses": {},
 		"schemas": {
+			"APIKey_Scopes": {
+				"enum": ["read", "write"],
+				"type": "string"
+			},
+			"APIKey": {
+				"description": "Users must assign unique names to each APIKey",
+				"properties": {
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"user": {
+						"type": "string",
+						"description": "APIKeys are linked to users"
+					},
+					"name": {
+						"type": "string",
+						"description": "Every APIKey should have a unique name"
+					},
+					"jwt": {
+						"type": "string",
+						"description": "Store latest JWT for authorizaiton"
+					},
+					"expiresAt": {
+						"type": "string",
+						"format": "date-time",
+						"description": "Date the API Key expires"
+					},
+					"scopes": {
+						"items": {
+							"$ref": "#/components/schemas/APIKey_Scopes"
+						},
+						"type": "array",
+						"description": "Scopes of the API Key relative to the User account"
+					}
+				},
+				"required": ["user", "name", "expiresAt"],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"Guestbook": {
+				"properties": {
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"updatedAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"address": {
+						"type": "string"
+					},
+					"message": {
+						"type": "string"
+					}
+				},
+				"required": ["address", "message"],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Item": {
 				"properties": {
 					"name": {
@@ -16,9 +81,7 @@
 						"format": "double"
 					}
 				},
-				"required": [
-					"name"
-				],
+				"required": ["name"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -66,10 +129,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"signer",
-					"realm"
-				],
+				"required": ["signer", "realm"],
 				"type": "object"
 			},
 			"MetadataResponse": {
@@ -81,9 +141,7 @@
 						"$ref": "#/components/schemas/Metadata"
 					}
 				},
-				"required": [
-					"address"
-				],
+				"required": ["address"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -112,22 +170,12 @@
 						"example": 10
 					}
 				},
-				"required": [
-					"ok",
-					"message",
-					"requests",
-					"ttl"
-				],
+				"required": ["ok", "message", "requests", "ttl"],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Scopes": {
-				"enum": [
-					"admin",
-					"user",
-					"banned",
-					"verified"
-				],
+			"User_Scopes": {
+				"enum": ["admin", "user", "banned", "verified"],
 				"type": "string"
 			},
 			"UserDoc": {
@@ -148,16 +196,11 @@
 					},
 					"scopes": {
 						"items": {
-							"$ref": "#/components/schemas/Scopes"
+							"$ref": "#/components/schemas/User_Scopes"
 						},
 						"type": "array",
 						"description": "Privleged access to API's and other account flags",
-						"example": [
-							"user",
-							"admin",
-							"verified",
-							"banned"
-						]
+						"example": ["user", "admin", "verified", "banned"]
 					},
 					"jwt": {
 						"type": "string",
@@ -167,10 +210,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"address",
-					"_id"
-				],
+				"required": ["address", "_id"],
 				"type": "object",
 				"additionalProperties": false
 			},
@@ -188,9 +228,7 @@
 						"type": "string"
 					}
 				},
-				"required": [
-					"user"
-				],
+				"required": ["user"],
 				"type": "object",
 				"additionalProperties": false
 			}
@@ -214,6 +252,146 @@
 	},
 	"openapi": "3.0.0",
 	"paths": {
+		"/api-keys": {
+			"get": {
+				"operationId": "FindAllitems",
+				"responses": {
+					"200": {
+						"description": "Array of APIKeys",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/APIKey"
+									},
+									"type": "array"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": ["message"],
+									"type": "object"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"message": "Unauthorized request"
+										}
+									}
+								}
+							}
+						}
+					}
+				},
+				"description": "Get all APIKeys",
+				"summary": "Get all APIKeys",
+				"tags": ["Authentication"],
+				"security": [],
+				"parameters": []
+			}
+		},
+		"/guestbook": {
+			"get": {
+				"operationId": "FindAllitems",
+				"responses": {
+					"200": {
+						"description": "Array of Items",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"allOf": [
+											{
+												"$ref": "#/components/schemas/Guestbook"
+											},
+											{
+												"properties": {
+													"_id": {
+														"type": "string"
+													}
+												},
+												"required": ["_id"],
+												"type": "object"
+											}
+										]
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Get all items",
+				"summary": "Get all items",
+				"tags": ["Guestbook"],
+				"security": [],
+				"parameters": []
+			},
+			"post": {
+				"operationId": "CreateItem",
+				"responses": {
+					"200": {
+						"description": "New Item",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Guestbook"
+										},
+										{
+											"properties": {
+												"_id": {
+													"type": "string"
+												}
+											},
+											"required": ["_id"],
+											"type": "object"
+										}
+									]
+								}
+							}
+						}
+					}
+				},
+				"description": "Create an Item",
+				"summary": "Create an Item",
+				"tags": ["Guestbook"],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"description": "Provide new document contents",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"message": {
+										"type": "string"
+									},
+									"address": {
+										"type": "string"
+									}
+								},
+								"required": ["message", "address"],
+								"type": "object",
+								"description": "Provide new document contents"
+							}
+						}
+					}
+				}
+			}
+		},
 		"/crud": {
 			"get": {
 				"operationId": "FindAllitems",
@@ -234,9 +412,7 @@
 														"type": "string"
 													}
 												},
-												"required": [
-													"_id"
-												],
+												"required": ["_id"],
 												"type": "object"
 											}
 										]
@@ -260,9 +436,7 @@
 				},
 				"description": "Get all items",
 				"summary": "Get all items",
-				"tags": [
-					"CRUD"
-				],
+				"tags": ["CRUD"],
 				"security": [],
 				"parameters": []
 			},
@@ -284,9 +458,7 @@
 													"type": "string"
 												}
 											},
-											"required": [
-												"_id"
-											],
+											"required": ["_id"],
 											"type": "object"
 										}
 									]
@@ -306,9 +478,7 @@
 				},
 				"description": "Create an Item",
 				"summary": "Create an Item",
-				"tags": [
-					"CRUD"
-				],
+				"tags": ["CRUD"],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -322,9 +492,7 @@
 										"type": "string"
 									}
 								},
-								"required": [
-									"name"
-								],
+								"required": ["name"],
 								"type": "object",
 								"description": "Provide new document contents"
 							}
@@ -352,9 +520,7 @@
 													"type": "string"
 												}
 											},
-											"required": [
-												"_id"
-											],
+											"required": ["_id"],
 											"type": "object"
 										}
 									],
@@ -375,9 +541,7 @@
 				},
 				"description": "Get Item by ID",
 				"summary": "Get Item By ID",
-				"tags": [
-					"CRUD"
-				],
+				"tags": ["CRUD"],
 				"security": [],
 				"parameters": [
 					{
@@ -409,9 +573,7 @@
 													"type": "string"
 												}
 											},
-											"required": [
-												"_id"
-											],
+											"required": ["_id"],
 											"type": "object"
 										}
 									]
@@ -438,9 +600,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -456,14 +616,10 @@
 				},
 				"description": "Update an Item",
 				"summary": "Update an Item",
-				"tags": [
-					"CRUD"
-				],
+				"tags": ["CRUD"],
 				"security": [
 					{
-						"jwt": [
-							"admin"
-						]
+						"jwt": ["admin"]
 					}
 				],
 				"parameters": [
@@ -488,9 +644,7 @@
 										"type": "string"
 									}
 								},
-								"required": [
-									"name"
-								],
+								"required": ["name"],
 								"type": "object",
 								"description": "Content to update to"
 							}
@@ -516,9 +670,7 @@
 													"type": "string"
 												}
 											},
-											"required": [
-												"_id"
-											],
+											"required": ["_id"],
 											"type": "object"
 										}
 									]
@@ -545,9 +697,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -563,14 +713,10 @@
 				},
 				"description": "Delete an Item",
 				"summary": "Delete an Item",
-				"tags": [
-					"CRUD"
-				],
+				"tags": ["CRUD"],
 				"security": [
 					{
-						"jwt": [
-							"admin"
-						]
+						"jwt": ["admin"]
 					}
 				],
 				"parameters": [
@@ -596,9 +742,7 @@
 							"application/json": {
 								"schema": {
 									"type": "number",
-									"enum": [
-										null
-									],
+									"enum": [null],
 									"nullable": true
 								}
 							}
@@ -614,9 +758,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -632,9 +774,7 @@
 				},
 				"description": "Generate a new Captcha",
 				"summary": "Generate a new Captcha",
-				"tags": [
-					"Authentication"
-				],
+				"tags": ["Authentication"],
 				"security": [],
 				"parameters": []
 			}
@@ -653,9 +793,7 @@
 											"type": "boolean"
 										}
 									},
-									"required": [
-										"success"
-									],
+									"required": ["success"],
 									"type": "object"
 								},
 								"examples": {
@@ -678,9 +816,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -696,9 +832,7 @@
 				},
 				"description": "Verify a Captcha",
 				"summary": "Verify a Captcha",
-				"tags": [
-					"Authentication"
-				],
+				"tags": ["Authentication"],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -711,9 +845,7 @@
 										"type": "string"
 									}
 								},
-								"required": [
-									"code"
-								],
+								"required": ["code"],
 								"type": "object"
 							}
 						}
@@ -769,10 +901,7 @@
 											"type": "boolean"
 										}
 									},
-									"required": [
-										"message",
-										"ok"
-									],
+									"required": ["message", "ok"],
 									"type": "object"
 								},
 								"examples": {
@@ -789,9 +918,7 @@
 				},
 				"description": "Optional DCL route",
 				"summary": "Optional DCL Route",
-				"tags": [
-					"Decentraland"
-				],
+				"tags": ["Decentraland"],
 				"security": [],
 				"parameters": []
 			}
@@ -844,10 +971,7 @@
 											"type": "boolean"
 										}
 									},
-									"required": [
-										"message",
-										"ok"
-									],
+									"required": ["message", "ok"],
 									"type": "object"
 								},
 								"examples": {
@@ -864,9 +988,7 @@
 				},
 				"description": "Required DCL Route",
 				"summary": "Required DCL Route",
-				"tags": [
-					"Decentraland"
-				],
+				"tags": ["Decentraland"],
 				"security": [],
 				"parameters": []
 			}
@@ -885,9 +1007,7 @@
 											"type": "boolean"
 										}
 									},
-									"required": [
-										"online"
-									],
+									"required": ["online"],
 									"type": "object"
 								},
 								"examples": {
@@ -903,9 +1023,7 @@
 				},
 				"description": "Check if API is online",
 				"summary": "Check if API is online",
-				"tags": [
-					"Tests"
-				],
+				"tags": ["Tests"],
 				"security": [],
 				"parameters": []
 			}
@@ -924,9 +1042,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -942,9 +1058,7 @@
 				},
 				"description": "Add 10 test items to DB",
 				"summary": "Add 10 test items to DB",
-				"tags": [
-					"Tests"
-				],
+				"tags": ["Tests"],
 				"security": [],
 				"parameters": []
 			}
@@ -996,9 +1110,7 @@
 				},
 				"description": "Test Rate Limitter",
 				"summary": "Test Rate Limitter",
-				"tags": [
-					"Tests"
-				],
+				"tags": ["Tests"],
 				"security": [],
 				"parameters": []
 			}
@@ -1017,9 +1129,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"nonce"
-									],
+									"required": ["nonce"],
 									"type": "object"
 								},
 								"examples": {
@@ -1042,9 +1152,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -1060,9 +1168,7 @@
 				},
 				"description": "Get a nonce for a user",
 				"summary": "Get a new nonce",
-				"tags": [
-					"Authentication"
-				],
+				"tags": ["Authentication"],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -1075,9 +1181,7 @@
 										"type": "string"
 									}
 								},
-								"required": [
-									"address"
-								],
+								"required": ["address"],
 								"type": "object"
 							}
 						}
@@ -1099,9 +1203,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -1124,9 +1226,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -1142,9 +1242,7 @@
 				},
 				"description": "Get a SIWE Payload for an address/nonce",
 				"summary": "Get a SIWE Payload",
-				"tags": [
-					"Authentication"
-				],
+				"tags": ["Authentication"],
 				"security": [],
 				"parameters": [],
 				"requestBody": {
@@ -1160,10 +1258,7 @@
 										"type": "string"
 									}
 								},
-								"required": [
-									"nonce",
-									"address"
-								],
+								"required": ["nonce", "address"],
 								"type": "object"
 							}
 						}
@@ -1185,9 +1280,7 @@
 											"type": "boolean"
 										}
 									},
-									"required": [
-										"success"
-									],
+									"required": ["success"],
 									"type": "object"
 								},
 								"examples": {
@@ -1210,9 +1303,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -1228,11 +1319,18 @@
 				},
 				"description": "Login with SIWE",
 				"summary": "Login with SIWE",
-				"tags": [
-					"Authentication"
-				],
+				"tags": ["Authentication"],
 				"security": [],
-				"parameters": [],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "expiresIn",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
 				"requestBody": {
 					"description": "SIWE Object with address, signature, payload",
 					"required": true,
@@ -1252,17 +1350,11 @@
 												"type": "string"
 											}
 										},
-										"required": [
-											"payload",
-											"signature",
-											"address"
-										],
+										"required": ["payload", "signature", "address"],
 										"type": "object"
 									}
 								},
-								"required": [
-									"siwe"
-								],
+								"required": ["siwe"],
 								"type": "object",
 								"description": "SIWE Object with address, signature, payload"
 							}
@@ -1285,9 +1377,7 @@
 											"type": "boolean"
 										}
 									},
-									"required": [
-										"success"
-									],
+									"required": ["success"],
 									"type": "object"
 								},
 								"examples": {
@@ -1310,9 +1400,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -1328,9 +1416,7 @@
 				},
 				"description": "Logout from SIWE",
 				"summary": "Logout from SIWE",
-				"tags": [
-					"Authentication"
-				],
+				"tags": ["Authentication"],
 				"security": [],
 				"parameters": []
 			}
@@ -1372,9 +1458,7 @@
 											"type": "string"
 										}
 									},
-									"required": [
-										"message"
-									],
+									"required": ["message"],
 									"type": "object"
 								},
 								"examples": {
@@ -1390,9 +1474,7 @@
 				},
 				"description": "Get SIWE Profile",
 				"summary": "Get SIWE Profile",
-				"tags": [
-					"Authentication"
-				],
+				"tags": ["Authentication"],
 				"security": [],
 				"parameters": []
 			}
@@ -1419,6 +1501,10 @@
 		{
 			"name": "Decentraland",
 			"description": "Example routes enforcing DCL middleware"
+		},
+		{
+			"name": "Guestbook",
+			"description": "Guestbook API Routes"
 		}
 	]
 }
