# src/models/index.ts
@@ -1,2 +1,4 @@
 export { Item, ItemModel } from "./Item";
-export { User, UserModel, Scopes } from "./User";
+export { Guestbook, GuestbookModel } from "./Guestbook";
+export { User, UserModel, User_Scopes as Scopes } from "./auth/User";
+export { APIKey, APIKeyModel } from "./auth/APIKey";
